# sc2xmlreader_pypi_package

./: README.md  pyproject.toml
integration_test/: README  demoLocal.py
integration_test/sc2xmlreader_dev/: const.py  sc2xmlreader.py  sc2xmlreader_validator.py
src/sc2xmlreader/: const.py  sc2xmlreader.py  sc2xmlreader_validator.py
tests/: test_sc2xmlreader.py  test_sc2xmlreader_validator.py
